feat: create generic components Button, Menu, Logo

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Your App</title>
     <link href="https://fonts.cdnfonts.com/css/metropolis-2" rel="stylesheet" />
+    <link href="../global.css" rel="stylesheet" />
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="root"></div>
     <script src="../src/index.js"></script>
   </body>
