--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./favicon.ico" />
     <title>XML Download</title>
     <link href="https://fonts.cdnfonts.com/css/metropolis-2" rel="stylesheet" />
     <link href="../global.css" rel="stylesheet" />
